--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                         </div>
 
                         <div class=" pl-8 mb-18 ">
-                            <textarea name="" id="" cols="70" rows="10" placeholder="About Me"></textarea>
+                            <textarea cols="70" rows="10" placeholder="About Me"></textarea>
                         </div>
                         <div>
                             <button class="btns3  ">Sign up</button>
@@ -428,7 +428,7 @@
                         </a>
                     </div>
                 </div>
-                <ul class="col-lg-7 col-12 text_white ">
+                <div class="col-lg-7 col-12 text_white ">
                     <ul class="row">
                         <ul class="col-3 col-md-3 col-6">
                             <li class="mb-11 mt-126 text_white  fontstyle">SERVICES</li>
@@ -472,7 +472,7 @@
 
 
                     </ul>
-                </ul>
+                </div>
             </div>
             <p class="text_white text_center lasttext">© Credits of companyName belong to companyName.</p>
         </div>
